# posing

./: CMakeLists.txt  input.md  package.xml  readme.md
img/: framework.drawio
include/posing/: globalmap.hpp  reflector.hpp
launch/: posing.launch
rviz/: pose.rviz
src/: globalmap.cpp  pose_node.cpp  reflector.cpp
